修改 执行逻辑。